# handwriting_formulas_improvement

./: Makefile  README.md  pyproject.toml  report.md  requirements.txt
app/: streamlit_app.py
evalution_model/: eval_results_qwen3vl_20k.json  eval_results_qwen3vl_2b_latex_ocr.json  eval_results_qwen3vl_2b_latex_ocr_math.json  eval_results_qwen3vl_2b_latex_one_shot.json  eval_results_qwen3vl_2b_latex_zero_shot.json
src/: evaluate.py  infer.py  train.py
