[project]
name = "handwriting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]
